--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "BakaDB TCP Server",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint . --ext=.ts,.js",
+    "format": "eslint . --ext .ts,.js --fix",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -23,11 +25,20 @@
   },
   "homepage": "https://github.com/AokiAreAoki/bakadb-server#readme",
   "devDependencies": {
+    "@types/lodash": "^4.14.184",
     "@types/node": "^18.7.13",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "eslint": "^8.23.0",
+    "eslint-config-development": "file:src/packages/eslint-development",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-plugin-development": "file:src/packages/eslint-development",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.5",
+    "eslint-plugin-promise": "^6.0.1",
+    "husky": "^8.0.1",
     "typescript": "^4.8.2"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.184",
     "lodash": "^4.17.21"
   }
 }
