--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "BakaDB TCP Server",
   "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint . --ext=.ts,.js",
-    "format": "eslint . --ext .ts,.js --fix",
+    "lint": "eslint ./src ./*.json --ext=.ts,.js,.json",
+    "format": "eslint ./src ./*.json --ext .ts,.js,.json --fix",
     "prepare": "husky install"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AokiAreAoki/bakadb-server.git"
+    "url": "git+https://github.com/aoki-n-fin/bakadb-server"
   },
   "keywords": [
     "baka",
@@ -18,12 +18,12 @@
     "bakadb",
     "server"
   ],
-  "author": "Aoki",
+  "author": "Aoki&Fin",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/AokiAreAoki/bakadb-server/issues"
+    "url": "https://github.com/aoki-n-fin/bakadb-server/issues"
   },
-  "homepage": "https://github.com/AokiAreAoki/bakadb-server#readme",
+  "homepage": "https://github.com/aoki-n-fin/bakadb-server#readme",
   "devDependencies": {
     "@types/lodash": "^4.14.184",
     "@types/node": "^18.7.13",
@@ -33,6 +33,7 @@
     "eslint-config-standard-with-typescript": "^22.0.0",
     "eslint-plugin-development": "file:src/packages/eslint-development",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-promise": "^6.0.1",
     "husky": "^8.0.1",
